# Escanorr

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: BridgeVault.sol  Groth16Verifier.sol  IncrementalMerkleTree.sol  NullifierRegistry.sol  PrivacyPool.sol
contracts/test/: BridgeVault.t.sol  Groth16Verifier.t.sol  IncrementalMerkleTree.t.sol  NullifierRegistry.t.sol  PrivacyPool.t.sol
crates/escanorr-bridge/: Cargo.toml
crates/escanorr-bridge/src/: adapter.rs  lib.rs  retry.rs
crates/escanorr-bridge/tests/: bridge_integration.rs  e2e_bridge.rs
crates/escanorr-circuits/: Cargo.toml
crates/escanorr-circuits/src/: bridge.rs  gadgets.rs  lib.rs  transfer.rs  wealth.rs  withdraw.rs
crates/escanorr-cli/: Cargo.toml
crates/escanorr-cli/src/: main.rs
crates/escanorr-client/: Cargo.toml
crates/escanorr-client/src/: lib.rs  wallet.rs
crates/escanorr-contracts/: Cargo.toml
crates/escanorr-contracts/src/: lib.rs  nullifier_set.rs  pool.rs
crates/escanorr-node/: Cargo.toml
crates/escanorr-node/src/: batch.rs  lib.rs  state.rs  storage.rs
crates/escanorr-note/: Cargo.toml
crates/escanorr-note/benches/: note_bench.rs
crates/escanorr-note/src/: encryption.rs  keys.rs  lib.rs  note.rs  stealth.rs
crates/escanorr-note/tests/: crypto_roundtrip.rs  prop_tests.rs
crates/escanorr-primitives/: Cargo.toml
crates/escanorr-primitives/benches/: primitives_bench.rs
crates/escanorr-primitives/src/: envelope.rs  lib.rs  nullifier.rs  poseidon.rs  types.rs
crates/escanorr-primitives/tests/: prop_tests.rs
crates/escanorr-prover/: Cargo.toml
crates/escanorr-prover/src/: lib.rs  prove.rs
crates/escanorr-rpc/: Cargo.toml
crates/escanorr-rpc/src/: lib.rs  metrics.rs  rate_limit.rs  routes.rs  server.rs
crates/escanorr-rpc/tests/: rpc_integration.rs
crates/escanorr-sdk/: Cargo.toml
crates/escanorr-sdk/examples/: bridge.rs  e2e.rs  withdraw.rs
crates/escanorr-sdk/src/: lib.rs  orchestrator.rs
crates/escanorr-sdk/tests/: cross_crate_integration.rs  e2e_flow.rs  full_pipeline.rs  workspace_integration.rs
crates/escanorr-tree/: Cargo.toml
crates/escanorr-tree/benches/: tree_bench.rs
crates/escanorr-tree/src/: lib.rs  merkle.rs
crates/escanorr-tree/tests/: merkle_integration.rs  prop_tests.rs
crates/escanorr-verifier/: Cargo.toml
crates/escanorr-verifier/src/: lib.rs  verify.rs
deploy/helm/escanorr/: Chart.yaml  values.yaml
deploy/helm/escanorr/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
docs/adr/: 001-halo2-ipa-pallas-vesta.md  002-domain-separated-nullifiers.md  003-recursive-proof-wrapping.md  004-fixed-size-proof-envelopes.md  005-bridge-relayer-architecture.md
docs/guides/: api.md  deployment.md  groth16-setup.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: encryption.rs  envelope.rs  merkle.rs  nullifier.rs  poseidon.rs
sdks/typescript/: package-lock.json  package.json  vitest.config.ts
sdks/typescript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/typescript/test/: client.test.ts
