[package]
name = "escanorr-bridge"
description = "Cross-chain bridge: ZcashAdapter, ZcashForkAdapter, EVMAdapter with recursive proof wrapping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
escanorr-primitives.workspace = true
escanorr-note.workspace = true
escanorr-contracts.workspace = true
escanorr-prover.workspace = true
escanorr-verifier.workspace = true
pasta_curves.workspace = true
ff.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
escanorr-primitives.workspace = true
serde_json.workspace = true
