[package]
name = "escanorr-circuits"
description = "Halo2 ZK circuits: transfer, withdraw, bridge, wealth proof, aggregation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
escanorr-primitives.workspace = true
escanorr-note.workspace = true
escanorr-tree.workspace = true
halo2_proofs.workspace = true
halo2_gadgets.workspace = true
pasta_curves.workspace = true
ff.workspace = true
group.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
