[package]
name = "escanorr-node"
description = "Prover daemon (EscanorrNode), encrypted note store, batch accumulator, mempool, peers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
escanorr-primitives.workspace = true
escanorr-note.workspace = true
escanorr-tree.workspace = true
escanorr-circuits.workspace = true
escanorr-prover.workspace = true
escanorr-verifier.workspace = true
escanorr-contracts.workspace = true
pasta_curves.workspace = true
ff.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
sled.workspace = true
bincode.workspace = true

[dev-dependencies]
tempfile = "3"
