[package]
name = "escanorr-primitives"
description = "Pallas/Vesta type aliases, Poseidon hash, Pedersen commitment, domain-separated nullifiers, proof envelopes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pasta_curves.workspace = true
ff.workspace = true
group.workspace = true
halo2_gadgets.workspace = true
halo2_proofs.workspace = true
subtle.workspace = true
rand.workspace = true
rand_core.workspace = true
serde = { workspace = true }
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "primitives_bench"
harness = false
