[package]
name = "escanorr-prover"
description = "ZK proof generation: setup, prove, async pipeline, proof envelope wrapping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
escanorr-primitives.workspace = true
escanorr-circuits.workspace = true
halo2_proofs.workspace = true
pasta_curves.workspace = true
ff.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
escanorr-note.workspace = true
escanorr-tree.workspace = true
