[package]
name = "escanorr-verifier"
description = "Proof verification: verify_transfer, verify_withdraw, verify_bridge, batch verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
escanorr-primitives.workspace = true
escanorr-circuits.workspace = true
halo2_proofs.workspace = true
pasta_curves.workspace = true
ff.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
escanorr-prover.workspace = true
